# lecture2go-dl

./: .gitignore  Cargo.toml  README.md
src/: main.rs
